trying to resolve margin issues on content wrapper.... media query does not appear to be working... removed and added generous bottom margin to test on iphone/heroku

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -12,11 +12,7 @@ $tiny: 350px;
 }
 
 .content {
-  margin-bottom: 10vmax;
-
-  @media screen and (max-width: $small) {
-    margin-bottom: 15vmax;
-  }
+  margin-bottom: 15vmax;
 }
 
 #flash {
